--- a/style.css
+++ b/style.css
@@ -743,8 +743,7 @@ footer {
 
 
 
- @media (max-width: 380px) {
-
+@media screen and (max-width: 412px) {
   .navbar a 
   { 
     font-size: 0.9rem; 
@@ -827,6 +826,7 @@ footer {
   .contact-info
   {
     font-size: 1rem;
+    white-space: nowrap;
     margin-bottom: 10rem;
   }
 
